<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtReceiverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/receiver_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/txtReceiverMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/receiver_message"
        android:layout_marginBottom="5dp"
        android:maxWidth="220dp"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingBottom="7dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/txtReceiverName"
        app:layout_constraintTop_toBottomOf="@id/txtReceiverName"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txtReceiverMsgTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtReceiverMsg"
        app:layout_constraintBottom_toBottomOf="@id/txtReceiverMsg" />

</androidx.constraintlayout.widget.ConstraintLayout>