<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_screens.RoomChat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/room_chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/btnBackgroundColor"
        android:theme="?attr/actionBarTheme"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/room_chat_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            app:tint="@color/white"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/room_chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_room_chat_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        android:paddingHorizontal="10dp"
        app:stackFromEnd="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/sender_text_message"
        app:layout_constraintBottom_toTopOf="@+id/txtRoomChatMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_chat_toolbar" />

    <EditText
        android:id="@+id/txtRoomChatMessage"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/background_search_edit_text"
        android:hint="@string/message"
        android:inputType="text"
        android:lines="3"
        android:layout_margin="10dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="15dp"
        android:paddingEnd="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnSendRoomChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="@+id/txtRoomChatMessage"
        app:layout_constraintEnd_toEndOf="@+id/txtRoomChatMessage"
        app:layout_constraintTop_toTopOf="@+id/txtRoomChatMessage"
        android:src="@drawable/ic_send" />

    <ImageView
        android:id="@+id/imgNoMessages"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/chat_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_messages"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imgNoMessages"
        app:layout_constraintStart_toStartOf="@+id/imgNoMessages"
        app:layout_constraintTop_toBottomOf="@+id/imgNoMessages" />

</androidx.constraintlayout.widget.ConstraintLayout>